--- a/gridot/GriDot/Base.lproj/Main.storyboard
+++ b/gridot/GriDot/Base.lproj/Main.storyboard
@@ -1555,7 +1555,7 @@
                                     <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="sprite" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="SpriteCollectionViewCell" id="uB9-9q-fV6" customClass="SpriteCollectionViewCell" customModule="GriDot" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="sprite" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="AssetCollectionViewCell" id="uB9-9q-fV6" customClass="AssetCollectionViewCell" customModule="GriDot" customModuleProvider="target">
                                         <rect key="frame" x="20" y="220" width="175" height="207"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="F4H-Sh-ik0">
